cabal-version:      2.0
name:               nix-nerd-fonts
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         ppbogdan@gmail.com
author:             Piotr Bogdan
homepage:           https://github.com/pbogdan/nix-nerd-fonts
synopsis:           nerd fonts nixified
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:    Generate
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings ScopedTypeVariables
    ghc-options:        -Wall
    build-depends:
        base >=4.12.0.0,
        aeson -any,
        aeson-pretty -any,
        bytestring -any,
        directory -any,
        ede -any,
        filepath -any,
        github -any,
        monad-logger -any,
        optparse-applicative -any,
        protolude >= 0.3.0,
        unordered-containers -any,
        shell-cmd -any,
        text -any,
        vector -any

executable nix-nerd-fonts
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.12.0.0,
        nix-nerd-fonts -any
